--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d 
 RewriteCond $1 !^(index\.php|assets|robots\.txt)
-RewriteRule ^(.*)$ /home/index.php
+RewriteRule ^(.*)$ index.php
